<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home_text"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_back"
        android:title="@string/nav_back_text"
        android:icon="@drawable/ic_arrow_left" />

    <item
        android:id="@+id/nav_refresh"
        android:title="@string/nav_refresh_text"
        android:icon="@drawable/ic_refresh" />

    <item
        android:id="@+id/nav_forward"
        android:title="@string/nav_forward_text"
        android:icon="@drawable/ic_arrow_right" />

    <item
        android:id="@+id/nav_time"
        android:title="@string/nav_time_text"
        android:icon="@drawable/ic_clock" />
</menu>